data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2102.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\88\80\80\80\00\01\01\6d\02\66\6e\00"
    "\00\03\82\80\80\80\00\01\00\07\85\80\80\80\00\01"
    "\01\66\00\01\0a\95\80\80\80\00\01\8f\80\80\80\00"
    "\00\41\01\04\7f\10\00\1a\41\00\05\41\2a\0b\0b"
  )
""
)